Fix Header Alignment and Create Approved Funding Component

--- a/Partners-Portal/src/app/components/payment-surrender/new-payment-surrender/new-payment-surrender.component.scss
+++ b/Partners-Portal/src/app/components/payment-surrender/new-payment-surrender/new-payment-surrender.component.scss
@@ -21,7 +21,7 @@
   flex: 1;
   padding: 30px;
   position: relative;
-  margin-top: -100px;
+  margin-top: -70px;
   z-index: 10;
 }
 
